add css and filter features

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
 <head>
   <title>The Gallery of Horns</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
   <header>
     <h1>The Gallery of Horns</h1>
-    <select>
+    <select id='drop-down'>
       <option value="default">Filter by Keyword</option>
     </select>
   </header>
   <main>
-    <section id="photo-template">
+    <section id="photo-template" class="remove-template">
       <h2></h2>
       <img src="" alt="">
       <p></p>
