--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
     </select>
   </header>
   <main>
-    <section id="photo-template" class="remove-template">
-      <h2></h2>
-      <img src="" alt="">
-      <p></p>
-    </section>
+    <template id="photo-template" class="remove-template">
+      <div>
+        <h2>{{title}}</h2>
+        <img src={{image_url}} alt="">
+        <p>{{description}}</p>
+      </div>
+    </template>
   </main>
   <footer>
     &copy; 2018 Code Fellows
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://unpkg.com/mustache@latest"></script>
   <script src='js/app.js'></script>
 </body>
 
