--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
     </select>
   </header>
   <main>
-    <template id="photo-template" class="remove-template">
-      <div>
-        <h2>{{title}}</h2>
-        <img src={{image_url}} alt="">
-        <p>{{description}}</p>
-      </div>
-    </template>
+    <section id="photo-template" class="remove-template">
+      <h2>{{title}}</h2>
+      <img src={{image_url}} alt="">
+      <p>{{description}}</p>
+    </section>
   </main>
   <footer>
     &copy; 2018 Code Fellows
