--- a/index.html
+++ b/index.html
@@ -15,14 +15,22 @@
     <h1>The Gallery of Horns</h1>
     <select id='drop-down'>
       <option value="default">Filter by Keyword</option>
+      <option value="all">View All Images</option>
     </select>
+    <div>
+      <button id="btn1">Page 1</button>
+      <button id="btn2">Page 2</button>
+    </div>
   </header>
-  <main>
-    <section id="photo-template" class="remove-template">
+  <template id="photo-template" class="remove-template">
+    <div>
       <h2>{{title}}</h2>
       <img src={{image_url}} alt="">
       <p>{{description}}</p>
-    </section>
+    </div>
+  </template>
+  <main>
+
   </main>
   <footer>
     &copy; 2018 Code Fellows
@@ -30,6 +38,7 @@
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://unpkg.com/mustache@latest"></script>
+
   <script src='js/app.js'></script>
 </body>
 
