--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!-- Note: you may use this starter code, but it is not a requirement -->
 
 <!DOCTYPE html>
@@ -17,20 +15,19 @@
     <h1>The Gallery of Horns</h1>
     <select id='drop-down'>
       <option value="default">Filter by Keyword</option>
-      <option value="all">View All Images</option>
     </select>
-    <div>
-      <button id="btn1">Page 1</button>
-      <button id="btn2">Page 2</button>
-    </div>
-  </header>
-  <section id="photo-template" class="remove-template">
-    <h2>{{title}}</h2>
-    <img src={{image_url}} alt="">
-    <p>{{description}}</p>
-  </section>
-  <main>
+   <div>
+    <button id="btn1">Page 1</button>
+    <button id="btn2">Page 2</button>
+   </div>
 
+  </header>
+  <main>
+    <template id="photo-template" class="remove-template">
+      <h2>{{title}}</h2>
+      <img src={{image_url}} alt="">
+      <p>{{description}}</p>
+    </template>
   </main>
   <footer>
     &copy; 2018 Code Fellows
@@ -38,8 +35,6 @@
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://unpkg.com/mustache@latest"></script>
-
-
   <script src='js/app.js'></script>
 </body>
 
